--- a/public/ok.html
+++ b/public/ok.html
@@ -48,9 +48,10 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/ably/browser/static/ably.min.js"></script>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="client.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="/client.js"></script>
 </body>
 
 </html>
